--- a/index.html
+++ b/index.html
@@ -114,6 +114,18 @@
     googletag.pubads().refresh([LeftSideRailSlot, RightSideRailSlot]);
   }, 30000);
 </script>
+
+
+<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script> 
+	  <script>   window.googletag = window.googletag || {cmd: []}; googletag.cmd.push(function() { var interstitialSlot = googletag.defineOutOfPageSlot('/21849154601,23300816471/Ad.Plus-Interstitial', googletag.enums.OutOfPageFormat.INTERSTITIAL);  if (interstitialSlot) interstitialSlot.addService(googletag.pubads()); googletag.pubads().enableSingleRequest(); googletag.enableServices();   googletag.display(interstitialSlot);     }); 
+	  </script>
+
+
+
+
+
+
+	  
   </head>
   <body onload="startTime()">
   
