--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 </script>
 
 
-<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script> 
-	  <script>   window.googletag = window.googletag || {cmd: []}; googletag.cmd.push(function() { var interstitialSlot = googletag.defineOutOfPageSlot('/21849154601,23300816471/Ad.Plus-Interstitial', googletag.enums.OutOfPageFormat.INTERSTITIAL);  if (interstitialSlot) interstitialSlot.addService(googletag.pubads()); googletag.pubads().enableSingleRequest(); googletag.enableServices();   googletag.display(interstitialSlot);     }); 
-	  </script>
 
+/* Interstitial - Add to the <HEAD> section of your site. Read more: https://blog.ad.plus/interstitial */
+
+<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script> <script>   window.googletag = window.googletag || {cmd: []}; googletag.cmd.push(function() { var interstitialSlot = googletag.defineOutOfPageSlot('/21849154601,23300816471/Ad.Plus-Interstitial', googletag.enums.OutOfPageFormat.INTERSTITIAL);  if (interstitialSlot) interstitialSlot.addService(googletag.pubads()); googletag.pubads().enableSingleRequest(); googletag.enableServices();   googletag.display(interstitialSlot);     }); </script>
 
 
 
