--- a/index.html
+++ b/index.html
@@ -916,12 +916,14 @@
     <p>🌐 <b>Accessible Anywhere</b>–  Play from your phone, tablet, or PC.</p>
     <p>🔄 <b>New Games Weekly </b>–  We keep things fresh with regular updates.</p>
     <h2>Top 5 Unblocked Games on Only Games</h2>
-	 <p><strong><a href="https://only-games.github.io/projects/1v1.lol/index.html" style="color: #a83234;">1v1 Lol</a></strong>: Play 1v1.lol unblocked the online building simulator & third person shooting game at Only Games. 1v1.lol is a competitive online third-person shooter that challenges players to strategically build structures while navigating the map.</p>
-          <p><strong><a href="https://only-games.github.io/projects/2048/index.html" style="color: #a83234;">2048</a></strong>: Play 2048 online join the tiles and reach 2048 number. Even if you don't love numbers you will love this classic game. </p>
-	    <p><strong><a href="https://only-games.github.io/projects/ducklife4/index.html" style="color: #a83234;">Duck Life 4</a></strong>: Duck Life 4 is one of the latest and most entertaining entries in the series. Train your duck, feed it, and collect accessories to help it reach its full potential.</p>
-	   <p><strong><a href="https://only-games.github.io/projects/flappy-bird/index.html" style="color: #a83234;">Flappy Bird</a></strong>: The game is a side-scrolling adventure where the player guides a bird named Faby, navigating through gaps between green pipes while avoiding collisions.</p>
-	   <p><strong><a href="https://only-games.github.io/projects/core-ball/index.html" style="color: #a83234;">Core Ball</a></strong>:  Coreball Game – The objective is simple: throw your ball at the core without hitting any of the other balls already attached to it.</p>
-
+	  <p>You can play these top 5 github.io games on Only Games without any distractions.</p>
+	  <ul>
+	 <li><strong><a href="https://only-games.github.io/projects/tunnel-rush/index.html" style="color: #a83234;">Tunnel Rush</a></strong>: Play Tunnel Rush unblocked on Only Games and race through neon tunnels filled with spinning obstacles at lightning speed. Test your reflexes in this thrilling, unblocked browser game!</li>
+         <li><strong><a href="https://only-games.github.io/projects/soccer-random/index.html" style="color: #a83234;">Soccer Random Unblocked</a></strong>: Play Soccer Random on Only Games and enjoy a hilarious one-button soccer showdown—jump to kick, score five goals, and laugh through unpredictable fields, crazy ragdoll physics, and random twists every round. </li>
+	 <li><strong><a href="https://only-games.github.io/projects/boxing-random/index.html" style="color: #a83234;">Boxing Random</a></strong>: Play Boxing Random on Only Games and dive into chaotic 2-player fights powered by ragdoll physics—land a knockout head punch first in fast-paced rounds where arenas, player abilities, and environments change every time!</li>
+	   <li><strong><a href="https://only-games.github.io/projects/flappy-bird/index.html" style="color: #a83234;">Flappy Bird</a></strong>: The game is a side-scrolling adventure where the player guides a bird named Faby, navigating through gaps between green pipes while avoiding collisions.</li>
+	   <li><strong><a href="https://only-games.github.io/projects/core-ball/index.html" style="color: #a83234;">Core Ball</a></strong>:  Coreball Game – The objective is simple: throw your ball at the core without hitting any of the other balls already attached to it.</li>
+  </ul>
   </div>
 </section>
 
