--- a/index.html
+++ b/index.html
@@ -915,6 +915,7 @@
     <p>🎮 <b>Handpicked Titles</b>– We feature only games that are tested, safe, and fun.</p>
     <p>🌐 <b>Accessible Anywhere</b>–  Play from your phone, tablet, or PC.</p>
     <p>🔄 <b>New Games Weekly </b>–  We keep things fresh with regular updates.</p>
+	  <div class="section">
     <h2>Top 5 Unblocked Games on Only Games</h2>
 	  <p>You can play these top 5 github.io games on Only Games without any distractions.</p>
 	  <ul>
@@ -924,6 +925,9 @@
 	   <li><strong><a href="https://only-games.github.io/projects/flappy-bird/index.html" style="color: #a83234;">Flappy Bird</a></strong>: The game is a side-scrolling adventure where the player guides a bird named Faby, navigating through gaps between green pipes while avoiding collisions.</li>
 	   <li><strong><a href="https://only-games.github.io/projects/core-ball/index.html" style="color: #a83234;">Core Ball</a></strong>:  Coreball Game – The objective is simple: throw your ball at the core without hitting any of the other balls already attached to it.</li>
   </ul>
+	  </div>
+
+	  
   </div>
 </section>
 
