--- a/index.html
+++ b/index.html
@@ -907,14 +907,13 @@
 	      
 <section>
   <div class="container last-section">
-    <h2>Wanna Play Your Favorite Games Without Any Distraction?</h2>
-    <p><a href="https://only-games.github.io/" style="color: #a83234;">Only Games</a> is the perfect spot. This platform is designed to give you seamless, ad-free gaming experiences that don’t require any downloads. No matter if you’re on a school network, a Chromebook, or even at work, Only Games makes sure you can enjoy the best Unblocked Games hassle-free. You can get instant access to fun with Unblocked Games 6x, no matter where you are!</p>
-
-    <h2>Why Play on Only-Games?</h2>
-    <p>✅ <b>No Downloads Required</b>– Just click and play instantly in your browser.</p>
-    <p>🎮 <b>Handpicked Titles</b>– We feature only games that are tested, safe, and fun.</p>
-    <p>🌐 <b>Accessible Anywhere</b>–  Play from your phone, tablet, or PC.</p>
-    <p>🔄 <b>New Games Weekly </b>–  We keep things fresh with regular updates.</p>
+  <div style="text-align: left; max-width: 600px; margin: 0 auto; color: #fff; font-family: Arial, sans-serif;">
+  <h2>Why Play on Only-Games?</h2>
+  <p>✅ <strong>No Downloads Required</strong> – Just click and play instantly in your browser.</p>
+  <p>🎮 <strong>Handpicked Titles</strong> – We feature only games that are tested, safe, and fun.</p>
+  <p>🌐 <strong>Accessible Anywhere</strong> – Play from your phone, tablet, or PC.</p>
+  <p>🔄 <strong>New Games Weekly</strong> – We keep things fresh with regular updates.</p>
+</div>
 	
     <h2>Top 5 Unblocked Games on Only Games</h2>
 	  <ul>
