--- a/projects/blackjack/index.html
+++ b/projects/blackjack/index.html
@@ -137,24 +137,28 @@
     <div id="refreshContainer"></div>
     <p id="results"></p>
 <section style="background-color: #1c1c1d; padding: 70px 0px; ">
-      <div class="container last-section">
-        <h2>Wanna Play Your Favorite Games Without Any Distraction?</h2>
-        <p><a href="https://only-games.github.io/" style="color: #a83234;">Only Games</a> is the perfect spot. This platform is designed to give you seamless, ad-free gaming experiences that don’t require any downloads. No matter if you’re on a school network, a Chromebook, or even at work, Only Games makes sure you can enjoy the best Unblocked Games hassle-free. You can get instant access to fun with Unblocked Games 6x, no matter where you are!</p>
-    
-        <h2>Why Play on Only-Games?</h2>
-        <p>✅ <b>No Downloads Required</b>– Just click and play instantly in your browser.</p>
-        <p>🎮 <b>Handpicked Titles</b>– We feature only games that are tested, safe, and fun.</p>
-        <p>🌐 <b>Accessible Anywhere</b>–  Play from your phone, tablet, or PC.</p>
-        <p>🔄 <b>New Games Weekly </b>–  We keep things fresh with regular updates.</p>
-        <h2>Top 5 Unblocked Games on Only Games</h2>
-       <p><strong><a href="https://only-games.github.io/projects/1v1.lol/index.html" style="color: #a83234;">1v1 Lol</a></strong>: Play 1v1.lol unblocked the online building simulator & third person shooting game at Only Games. 1v1.lol is a competitive online third-person shooter that challenges players to strategically build structures while navigating the map.</p>
-              <p><strong><a href="https://only-games.github.io/projects/2048/index.html" style="color: #a83234;">2048</a></strong>: Play 2048 online join the tiles and reach 2048 number. Even if you don't love numbers you will love this classic game. </p>
-          <p><strong><a href="https://only-games.github.io/projects/ducklife4/index.html" style="color: #a83234;">Duck Life 4</a></strong>: Duck Life 4 is one of the latest and most entertaining entries in the series. Train your duck, feed it, and collect accessories to help it reach its full potential.</p>
-         <p><strong><a href="https://only-games.github.io/projects/flappy-bird/index.html" style="color: #a83234;">Flappy Bird</a></strong>: The game is a side-scrolling adventure where the player guides a bird named Faby, navigating through gaps between green pipes while avoiding collisions.</p>
-         <p><strong><a href="https://only-games.github.io/projects/core-ball/index.html" style="color: #a83234;">Core Ball</a></strong>:  Coreball Game – The objective is simple: throw your ball at the core without hitting any of the other balls already attached to it.</p>
-    
-      </div>
-    </section>
+  <div class="container last-section" style="text-align: left;">
+           <h2>Play Blackjack Online at Only Games</h2>
+    <p>Looking to challenge your luck and sharpen your strategy skills? Dive into the thrilling world of <strong>Blackjack online</strong>, one of the most iconic card games at <a href="https://only-games.github.io/" target="_blank" style="color: #a83234;">Only Games</a>. Whether you're a beginner or a seasoned card shark, our online version of Blackjack brings the casino's excitement straight to your browser with no downloads.</p>
+
+    <h2>How to Play Blackjack?</h2>
+    <p>The goal is simple: <strong>Get as close to 21 as possible without going over</strong>. You’re dealt two cards, and so is the dealer. Hit to draw more cards or stand to keep your hand as is. If your total beats the dealer’s without busting, you win!</p>
+
+    <h2>🃏 Why Play Blackjack on Only Games?</h2>
+    <ul>
+      <li>✅ <strong>Instant Access</strong> – No downloads or installations. Just click and play.</li>
+      <li>✅ <strong>Mobile-Friendly</strong> – Enjoy smooth gameplay on phones, tablets, or desktops.</li>
+      <li>✅ <strong>Safe & Secure</strong> – A clean gaming environment without pop-ups or hidden tricks.</li>
+    </ul>
+
+    <h3>🎲 Perfect for Casual and Serious Players Alike</h3>
+    <p>Whether you’re just learning the ropes or trying out advanced tactics like card counting, the <strong>free Blackjack game</strong> at Only Games provides a seamless and fun way to improve your skills. Play as much as you want—there are no limits and no hidden fees.</p>
+
+    <h4>Ready to Beat the Dealer?</h4>
+    <p>Play Blackjack unblocked now and enjoy an authentic card game experience – anytime, anywhere – only on Only Games.</p>
+  </div>
+</section>
+
     <!-- Footer -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
