--- a/projects/smash-karts/index.html
+++ b/projects/smash-karts/index.html
@@ -640,21 +640,40 @@ body {
 	</style>
 	  <section style="background-color: #1c1c1d; padding: 70px 0px; ">
       <div class="container last-section">
-        <h2>Wanna Play Your Favorite Games Without Any Distraction?</h2>
-        <p><a href="https://only-games.github.io/" style="color: #a83234;">Only Games</a> is the perfect spot. This platform is designed to give you seamless, ad-free gaming experiences that don’t require any downloads. No matter if you’re on a school network, a Chromebook, or even at work, Only Games makes sure you can enjoy the best Unblocked Games hassle-free. You can get instant access to fun with Unblocked Games 6x, no matter where you are!</p>
-    
-        <h2>Why Play on Only-Games?</h2>
-        <p>✅ <b>No Downloads Required</b>– Just click and play instantly in your browser.</p>
-        <p>🎮 <b>Handpicked Titles</b>– We feature only games that are tested, safe, and fun.</p>
-        <p>🌐 <b>Accessible Anywhere</b>–  Play from your phone, tablet, or PC.</p>
-        <p>🔄 <b>New Games Weekly </b>–  We keep things fresh with regular updates.</p>
-        <h2>Top 5 Unblocked Games on Only Games</h2>
-       <p><strong><a href="https://only-games.github.io/projects/1v1.lol/index.html" style="color: #a83234;">1v1 Lol</a></strong>: Play 1v1.lol unblocked the online building simulator & third person shooting game at Only Games. 1v1.lol is a competitive online third-person shooter that challenges players to strategically build structures while navigating the map.</p>
-              <p><strong><a href="https://only-games.github.io/projects/2048/index.html" style="color: #a83234;">2048</a></strong>: Play 2048 online join the tiles and reach 2048 number. Even if you don't love numbers you will love this classic game. </p>
-          <p><strong><a href="https://only-games.github.io/projects/ducklife4/index.html" style="color: #a83234;">Duck Life 4</a></strong>: Duck Life 4 is one of the latest and most entertaining entries in the series. Train your duck, feed it, and collect accessories to help it reach its full potential.</p>
-         <p><strong><a href="https://only-games.github.io/projects/flappy-bird/index.html" style="color: #a83234;">Flappy Bird</a></strong>: The game is a side-scrolling adventure where the player guides a bird named Faby, navigating through gaps between green pipes while avoiding collisions.</p>
-         <p><strong><a href="https://only-games.github.io/projects/core-ball/index.html" style="color: #a83234;">Core Ball</a></strong>:  Coreball Game – The objective is simple: throw your ball at the core without hitting any of the other balls already attached to it.</p>
-    
+  <h2>Play Smash Karts Online for Free at Only Games</h2>
+    <p>Get ready for fun, fast racing with action-packed battles! <strong>Smash Karts</strong> is now available to play online at 
+      <a href="https://only-games.github.io/" target="_blank">Only Games</a>. No downloads, no sign-ups — just click and play!</p>
+
+    <h3>What is Smash Karts?</h3>
+    <p><strong>Smash Karts</strong> is a 3D racing and shooting game. You drive a go-kart and race against other players. But this isn’t just about speed — you also collect weapons to blast your opponents!</p>
+
+    <h3>Why Play on Only Games?</h3>
+    <ul>
+      <li>✅ <strong>No download needed</strong> – Play right in your browser</li>
+      <li>✅ <strong>Unblocked access</strong> – Works at school, home, or work</li>
+      <li>✅ <strong>Multiplayer</strong> – Compete with real players around the world</li>
+      <li>✅ <strong>Safe and fun</strong> – All games are tested and easy to play</li>
+    </ul>
+
+    <h3>Game Highlights:</h3>
+    <ul>
+      <li>Fun online matches with 4 to 8 players</li>
+      <li>Cool weapons like rockets, guns, and bombs</li>
+      <li>Unlock new characters, hats, and karts</li>
+      <li>Colorful maps and exciting gameplay</li>
+      <li>Easy to learn and quick to join</li>
+    </ul>
+
+    <h3>How to Play:</h3>
+    <ul>
+      <li>Use the <strong>arrow keys</strong> or <strong>WASD</strong> to drive</li>
+      <li>Press <strong>spacebar</strong> to use weapons</li>
+      <li>Pick up boxes to get random weapons</li>
+      <li>Stay alive and try to win the match!</li>
+    </ul>
+
+    <p>Jump in now and enjoy the wild ride! Play 
+      <a href="https://only-games.github.io/projects/smash-karts/" target="_blank"><strong>Smash Karts on Only Games</strong></a> and see if you can become the last kart standing!</p>
       </div>
     </section>
     <!-- Footer -->
