--- a/projects/9007199254740992/index.html
+++ b/projects/9007199254740992/index.html
@@ -14,7 +14,7 @@
   <title>9007199254740992 - Play Now at Only Games</title>
 <meta name="description" content="Play 9007199254740992 and other exciting unblocked games for free. Enjoy smooth gameplay right from your browser on Only Games.">
 <meta name="keywords" content="9007199254740992, unblocked games, free online games, play 9007199254740992, GitHub.io games, Unblocked games, GitHub games">
-<link rel="canonical" href="https://only-games.github.io/projects/9007199254740992/index.html">
+<link rel="canonical" href="https://only-games.github.io/projects/9007199254740992/">
 <meta name="robots" content="index, follow">
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link href="style/others.css" rel="stylesheet" type="text/css">
