--- a/projects/a-small-world-cup/index.html
+++ b/projects/a-small-world-cup/index.html
@@ -9,7 +9,7 @@
 	 <title>A Small World Cup - Play Online for Free</title>
   <meta name="description" content="Play A Small World Cup online for free. Enjoy this exciting soccer game directly in your browser with no downloads needed.">
   <meta name="keywords" content="A Small World Cup, soccer game, football game online, browser games,  A Small World Cup Unblocked,">
-  <link rel="canonical" href="https://only-games.github.io/projects/a-small-world-cup/index.html">
+  <link rel="canonical" href="https://only-games.github.io/projects/a-small-world-cup/">
   <meta name="robots" content="index, follow">
 
 <script type="text/javascript">
