--- a/emulation/GBA/sonic-advance-2/index.html
+++ b/emulation/GBA/sonic-advance-2/index.html
@@ -11,7 +11,7 @@
   <title>Sonic Advance 2 - Play Classic GBA Game Online</title>
   <meta name="description" content="Enjoy Sonic Advance 2, the classic Game Boy Advance platformer. Play fast-paced action and exciting levels directly in your browser." />
   <meta name="keywords" content="Sonic Advance 2, GBA games, Unblocked games, GitHub.io games, GitHub games" />
-  <link rel="canonical" href="http://only-games.github.io/emulation/GBA/sonic-advance-2/index.html" />
+  <link rel="canonical" href="https://only-games.github.io/emulation/GBA/sonic-advance-2/index.html" />
   <meta name="robots" content="index, follow" />
 <link rel="dns-prefetch" href="https://universal.wgplayer.com" />
 
