--- a/projects/fnaf-4/index.html
+++ b/projects/fnaf-4/index.html
@@ -15,7 +15,7 @@
    <title>FNaF 4 - Play Online at Only Games</title>
   <meta name="description" content="Play FNaF 4 online for free on Only Games. Dive into the horror and survive the night in this thrilling GitHub-hosted game.">
   <meta name="keywords" content="FNaF 4, Five Nights at Freddy's 4, horror game, online game, GitHub.io games, Unblocked games, GitHub games">
-  <link rel="canonical" href="https://only-games.github.io/projects/fnaf-4/index.htmll">
+  <link rel="canonical" href="https://only-games.github.io/projects/fnaf-4/index.html ">
   <meta name="robots" content="index, follow">
     <style>
 /* Forkphorus styles... */
