--- a/emulation/GBA/pokemon-ruby/index.html
+++ b/emulation/GBA/pokemon-ruby/index.html
@@ -11,7 +11,7 @@
       <title>Play Pokemon Ruby Online - Classic GBA Adventure</title>
   <meta name="description" content="Relive the classic GBA experience with Pokemon Ruby. Explore the Hoenn region, catch Pokemon, and battle trainers directly from your browser.">
   <meta name="keywords" content="Pokemon Ruby, play Pokemon Ruby online, GBA emulator games, classic Pokemon games, GitHub.io games, Unblocked games, GitHub games">
-  <link rel="canonical" href="http://only-games.github.io/emulation/GBA/pokemon-ruby/index.html">
+  <link rel="canonical" href="https://only-games.github.io/emulation/GBA/pokemon-ruby/index.html ">
   <meta name="robots" content="index, follow">
 <link rel="dns-prefetch" href="https://universal.wgplayer.com" />
 
