--- a/emulation/SNES/super-mario-world-two/index.html
+++ b/emulation/SNES/super-mario-world-two/index.html
@@ -11,7 +11,7 @@
  <title>Play Super Mario World 2 Online | Only Games</title>
 <meta name="description" content="Enjoy the classic SNES experience with Super Mario World 2. Play online directly in your browser with smooth emulation and nostalgic fun.">
 <meta name="keywords" content="Super Mario World 2, SNES games online, play Super Mario World 2 free, GitHub.io games, Unblocked games, GitHub games">
-<link rel="canonical" href="http://only-games.github.io/emulation/SNES/super-mario-world-two/index.html">
+<link rel="canonical" href="https://only-games.github.io/emulation/SNES/super-mario-world-two/index.html ">
 <meta name="robots" content="index, follow">
 <link rel="dns-prefetch" href="https://universal.wgplayer.com" />
 
