--- a/emulation/N64/mario-party/index.html
+++ b/emulation/N64/mario-party/index.html
@@ -11,7 +11,7 @@
   <title>Mario Party - Play Classic N64 Multiplayer Fun Online</title>
   <meta name="description" content="Enjoy Mario Party, the classic Nintendo 64 multiplayer party game. Play online and relive the fun with friends and family." />
   <meta name="keywords" content="Mario Party, N64 games, Party games, Multiplayer games, GitHub.io games, Unblocked games, GitHub games" />
-  <link rel="canonical" href="http://only-games.github.io/emulation/N64/mario-party/index.html" />
+  <link rel="canonical" href="https://only-games.github.io/emulation/N64/mario-party/index.html " />
   <meta name="robots" content="index, follow" />
 <link rel="dns-prefetch" href="https://universal.wgplayer.com" />
 
