--- a/projects/subway-surfers-unity/iceland.html
+++ b/projects/subway-surfers-unity/iceland.html
@@ -19,7 +19,7 @@
   
   <meta name="keywords" content="Subway Surfers Iceland, Subway Surfers, endless running games, GitHub.io games, Unblocked games, GitHub games" />
   
-  <link rel="canonical" href="http://only-games.github.io/projects/subway-surfers-unity/iceland.html" />
+  <link rel="canonical" href="https://only-games.github.io/projects/subway-surfers-unity/iceland.html" />
   
   <meta name="robots" content="index, follow" />
 <script type="text/javascript" nonce="9f944ade6bfb4ad4a4c77a71f1b" src="//local.adguard.org?ts=1667970524361&amp;type=content-script&amp;dmn=yell0wsuit.page&amp;pth=%2Fhtml5-games%2Fgames%2Fsubway-surfers-unity%2Ficeland.html&amp;app=opera.exe&amp;css=3&amp;js=1&amp;rel=1&amp;rji=1&amp;sbe=1&amp;stealth=1&amp;st-dnt"></script>
