--- a/projects/poker/poker.html
+++ b/projects/poker/poker.html
@@ -4,7 +4,7 @@
   <title>Poker - Only Games</title>
  <meta name="description" content="Play Poker online for free on Only Games. Test your skills, strategize, and enjoy classic card gameplay right in your browser—no download needed!">
   <meta name="keywords" content="Poker, GitHub.io games, Unblocked games, GitHub games" />
-  <link rel="canonical" href="https://only-games.github.io/projects/poker/index.html" />
+  <link rel="canonical" href="https://only-games.github.io/projects/poker/poker.html" />
   <meta name="robots" content="index, follow" />
    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
    <!-- -->
