--- a/index.html
+++ b/index.html
@@ -927,8 +927,37 @@
 	   <li><strong><a href="https://only-games.github.io/projects/core-ball/index.html" style="color: #a83234;">Core Ball</a></strong>:  Coreball Game – The objective is simple: throw your ball at the core without hitting any of the other balls already attached to it.</li>
   </ul>
 	 
-
-	  
+<h2>How to play Unblocked Games 6x At School Or Work?</h2>
+	  <p>Just follow these simple steps to play not blocked games at school or work.</p>
+	  <ul>
+	  <li>Visit our website <a href="https://only-games.github.io/">Only Games</a></li>
+          <li>Select your favourite game: Look through our big collection or search for a game you want to play.</li>
+          <li>Just click and play: As Only Games offers games that are not blocked so no signup and downloads are required to play. Just simply click and play your favourite game.</li>
+	  </ul>
+	  <h2>Why Only Games is Better Than Other Gaming Sites</h2>
+	  <table>
+        <tbody><tr>
+            <th>Feature</th>
+            <th>Only Games</th>
+            <th>Other Sites</th>
+        </tr>
+        
+        <tr>
+            <td>No Downloads</td>
+            <td>✅ Play instantly</td>
+            <td>❌ Some require installs</td>
+        </tr>
+        <tr>
+            <td>Works at School/Work</td>
+            <td>✅ Unblocked</td>
+            <td>❌ Often restricted</td>
+        </tr>
+        <tr>
+            <td>Huge Game Selection</td>
+            <td>✅ 100+ games</td>
+            <td>❌ Limited choices</td>
+        </tr>
+    </tbody></table>
   </div>
 </section>
 
