--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@
 <h2>How to play Unblocked Games 6x At School Or Work?</h2>
 	  <p>Just follow these simple steps to play not blocked games at school or work.</p>
 	  <ul>
-	  <li>Visit our website <a href="https://only-games.github.io/">Only Games</a></li>
+	  <li>Visit our website <a href="https://only-games.github.io/">https://only-games.github.io</a></li>
           <li>Select your favourite game: Look through our big collection or search for a game you want to play.</li>
           <li>Just click and play: As Only Games offers games that are not blocked so no signup and downloads are required to play. Just simply click and play your favourite game.</li>
 	  </ul>
