--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
 <!-- ahref analytics -->
 
-	  <script src="https://analytics.ahrefs.com/analytics.js" data-key="+EsbdjoLk9pC/7hE01Y4sA" async></script>
+	  <script src="https://analytics.ahrefs.com/analytics.js" data-key="nKqec4sKNcP0894L3zJbug" async></script>
 
 	  
   </head>
